log
Sat 30 Mar 2024 02:02:37 AM UTC: 
 list.c | 41 +++++++++++++++++++++++++++++------------
 1 file changed, 29 insertions(+), 12 deletions(-)
 tests:  0|0
2d3c9fa
Sat 30 Mar 2024 02:08:43 AM UTC: 
 list.c | 18 ++++--------------
 1 file changed, 4 insertions(+), 14 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:61:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   61 |   return NULL;
      |          ^~~~
list.c:60:6: note: declared here
   60 | void pushFront(List *list, void *data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
78be2dc
